--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@ CTestTestfile.cmake
 _deps
 CMakeUserPresets.json
 testovoe (1).docx
+/build
 
 # CLion
 #  JetBrains specific template is maintained in a separate JetBrains.gitignore that can
