подключение база данных, добавлен график

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,8 @@ project(test5 VERSION 0.1 LANGUAGES CXX)
 
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-find_package(Qt6 REQUIRED COMPONENTS Quick Sql)
+find_package(QT NAMES Qt6 Qt5 COMPONENTS Core Quick Sql REQUIRED)
+find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Quick Sql)
 
 set(PROJECT_SOURCES
     src/main.cpp
@@ -51,7 +52,8 @@ set_target_properties(apptest5 PROPERTIES
 )
 
 target_link_libraries(apptest5
-    PRIVATE Qt6::Quick
+    PRIVATE Qt${QT_VERSION_MAJOR}::Quick
+    Qt${QT_VERSION_MAJOR}::Sql
 )
 
 include(GNUInstallDirs)
